se añadio un parrafo

--- a/pag1.html
+++ b/pag1.html
@@ -12,7 +12,7 @@
     
    <nav class="sidebar">
         <header>
-            
+            <h1>Hola</h1>
             <div class="text-logo">
                 <span class="name">ISwift</span>
                 <span class="profe">Vendedor</span>
